--- a/frontend/src/app/pages/backoffice/quiz/quizzes/quizzes.css
+++ b/frontend/src/app/pages/backoffice/quiz/quizzes/quizzes.css
@@ -1,9 +1,3 @@
-.avatar {
-  width: 32px;
-  height: 32px;
-  object-fit: cover;
-}
-
 .form-control:focus,
 .form-select:focus {
   box-shadow: none;
@@ -18,7 +12,6 @@
   display: flex;
   flex-direction: column;
   min-height: 440px;
-  margin-top: 40px;
 }
 
 .table-card .table-responsive {
@@ -40,4 +33,9 @@
   padding-bottom: .5rem;
   border-bottom: 1px solid rgba(0,0,0,.05);
   margin-bottom: 40px;
+}
+
+:host {
+  display: block;
+  padding-left: 15px;
 }
